bluec-tests/tests/invalid/types_bool/bool_and_uchar_conflict.c
_Bool b = 1;

int main(void)
{
    // this conflicts with previous definition of 'b'
    extern unsigned char b;
    return b;
}